--- a/forside.html
+++ b/forside.html
@@ -4,33 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>forside</title>
+    <link rel="stylesheet" href="forside.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Faster+One&family=Montserrat:wght@200&display=swap" rel="stylesheet">
+    <title>Forside</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><img src="Billeder/logo.png" alt="logo" /></li>
-          <li>
-            <a href="">forside</a>
-          </li>
-          <li>
-            <a href="">portfolio</a>
-          </li>
-          <li>
-            <a href="">om mig</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
+    <section id="first_section">
     <main>
-      <section class="splash_billede">
-        <div class="splash_tekst">
-          <h1>Kropsterapi</h1>
-          <p>Ved Louise Wilma</p>
-          <img src="Billeder/splash-billede_tekst.jpg" alt="splash-billede" />
+      <header>
+        <nav>
+          <ul>
+            <li>
+              <a href="forside.html">forside</a>
+            </li>
+            <li>
+              <a href="">portfolio</a>
+            </li>
+            <li>
+              <a href="om.html">om mig</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+        <div class="splash-billede_tekst">
+          <h1>PASSION FOR DESIGN</h1>
         </div>
       </section>
     </main>
+    <footer></footer>
   </body>
 </html>
