--- a/forside.html
+++ b/forside.html
@@ -17,7 +17,7 @@
         <nav>
           <ul>
             <li>
-              <a href="forside.html">forside</a>
+              <a href="">forside</a>
             </li>
             <li>
               <a href="">portfolio</a>
@@ -29,7 +29,7 @@
         </nav>
       </header>
         <div class="splash-billede_tekst">
-          <h1>PASSION FOR DESIGN</h1>
+          <h1>PASSION <br> FOR <br> DESIGN</h1>
         </div>
       </section>
     </main>
