--- a/om.html
+++ b/om.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="om.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Faster+One&family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
     <title>Om mig</title>
   </head>
   <body>
@@ -26,7 +32,7 @@
           </nav>
         </header>
       </main>
-      <div class="splash-billede_tekst">
+      <div class="om_mig">
         <h1>
           S<br />A<br />R<br />A<br />
           <br />
@@ -35,6 +41,13 @@
           R<br />
           U <br />
           P <br />
+          <br />
+          G <br />
+          J <br />
+          E <br />
+          S <br />
+          I <br />
+          N <br />
           G <br />
         </h1>
       </div>
