--- a/om.html
+++ b/om.html
@@ -32,7 +32,7 @@
           </nav>
         </header>
       </main>
-      <div class="om_mig">
+      <div class="om_mig_tekst">
         <h1>
           S<br />A<br />R<br />A<br />
           <br />
@@ -49,6 +49,7 @@
           I <br />
           N <br />
           G <br />
+          <br />
         </h1>
       </div>
     </section>
