--- a/om.html
+++ b/om.html
@@ -52,6 +52,38 @@
           <br />
         </h1>
       </div>
+
+      <br />
+
+      <div class="overskrift_1">
+        <h2>
+          “Som person er jeg ret eftertænksom, <br />
+          og det udspiller sig i alt jeg laver. <br />
+          Både i mit arbejdsliv og privatliv.”
+        </h2>
+      </div>
+
+      <div class="overskrift_2">
+        <h2>
+          “Jeg er nysgerrig på livet og hvad det kan. <br />
+          Jeg kan godt lide at tage de modige beslutninger.”
+        </h2>
+      </div>
+
+      <div class="overskrift_3">
+        <h2>
+          “Jeg vil beskrive min stil som: <br />
+          Utraditionel, æstetisk og drømmende.”
+        </h2>
+      </div>
+
+      <div class="overskrift_4">
+        <h2>“Jeg meget optaget af ord, mode og spiritualitet.”</h2>
+      </div>
+
+      <div class="collage">
+        <img src="/Billeder/collage.JPG" alt="" width="60%" height="60%" />
+      </div>
     </section>
   </body>
 </html>
