--- a/om.html
+++ b/om.html
@@ -57,8 +57,8 @@
 
       <div class="overskrift_1">
         <h2>
-          “Som person er jeg ret eftertænksom, <br />
-          og det udspiller sig i alt jeg laver. <br />
+          “Som person er jeg ret eftertænksom, og det udspiller sig i alt jeg
+          laver. <br />
           Både i mit arbejdsliv og privatliv.”
         </h2>
       </div>
@@ -74,9 +74,9 @@
         </h2>
       </div>
 
-      <div class="collage">
+      <!--   <div class="collage">
         <img src="/Billeder/collage.JPG" alt="" width="60%" height="60%" />
-      </div>
+      </div> -->
 
       <div class="overskrift_4">
         <h2>
