--- a/om.html
+++ b/om.html
@@ -84,6 +84,83 @@
           Jeg kan godt lide at tage de modige beslutninger.”
         </h2>
       </div>
+
+      <div class="cv">
+        <h2>CV</h2>
+
+        <h3>RECEPTIONIST</h3>
+        <h4>Arp-Hansen Hotel Group</h4>
+        <p>
+          <b>
+            Seasonal <br />
+            <br />
+            Ansættelsesperiode: jun. 2021 – nu
+          </b>
+        </p>
+
+        <br />
+
+        <h3>RECEPTIONIST</h3>
+        <h4>ISS A/S</h4>
+        <p>
+          <b>
+            Fulltime <br />
+            <br />
+            Ansættelsesperiode okt. 2018 – jan. 2021 <br />
+            <br />
+            Ansættelsens varighed: 2 år 4 mdr.
+          </b>
+        </p>
+
+        <br />
+
+        <h3>DRIFTSKOORDINATOR</h3>
+        <h4>Plenti</h4>
+        <p>
+          <b
+            >Fulltime <br />
+            <br />
+            Ansættelsesperiode sep. 2017 – mar. 2018 <br />
+            <br />
+            Ansættelsens varighed: 7 mdr.</b
+          >
+        </p>
+
+        <br />
+
+        <h3>KUNDERÅDGIVER</h3>
+        <h4>3 Danmark</h4>
+        <p>
+          <b>
+            Fulltime <br />
+            <br />
+            Ansættelsesperiode sep. 2015 – aug. 2016 <br />
+            <br />
+            Ansættelsens varighed: 1 år
+          </b>
+        </p>
+
+        <br />
+
+        <h3>EVENTPERSONALE</h3>
+        <h4>Weareinfront ApS</h4>
+        <p>
+          <b>
+            Partime <br />
+            <br />
+            Ansættelsesperiode aug. 2014 – aug. 2015 <br />
+            <br />
+            Ansættelsens varighed: 1 år 1 md.
+          </b>
+        </p>
+      </div>
+
+      <div class="uddannelse">
+        <h2>UDDANNELSE</h2>
+        <h3>KEA - KØBENHAVNS ERHVERVSAKADEMI</h3>
+        <h3>ROSKILDE UNIVERSITET</h3>
+        <h3>ORDRUP GYMNASIUM</h3>
+      </div>
     </section>
   </body>
 </html>
