--- a/om.html
+++ b/om.html
@@ -34,7 +34,8 @@
       </main>
       <div class="om_mig_tekst">
         <h1>
-          S<br />A<br />R<br />A<br />
+          S<br />
+          A<br />R<br />A<br />
           <br />
           K<br />O<br />N<br />
           D<br />
@@ -155,12 +156,49 @@
         </p>
       </div>
 
+      <br />
+
       <div class="uddannelse">
         <h2>UDDANNELSE</h2>
+
         <h3>KEA - KØBENHAVNS ERHVERVSAKADEMI</h3>
+        <h4>Akademiuddannelse i Multimediedesign</h4>
+        <p>
+          <b>
+            Indskrivningsår 2021 <br />
+            <br />
+            Forventet afslutningsår 2023
+          </b>
+        </p>
+
         <h3>ROSKILDE UNIVERSITET</h3>
+        <h4>Samfundsvidenskabelig bachelor</h4>
+        <p>
+          <b>
+            Studieretning: Poltik og forvalting <br />
+            <br />
+            Periode 2019 – 2021
+          </b>
+        </p>
+
         <h3>ORDRUP GYMNASIUM</h3>
+        <h4>STX-uddannelse</h4>
+        <p>
+          <b>
+            Studieretning: Engelsk A, Spansk/Fransk A, Samfundsfag B <br />
+            <br />
+            Indskrivningsperiode 2012 <br />
+            <br />
+            Afslutningsår 2015
+          </b>
+        </p>
       </div>
+
+      <br />
+
+      <footer>
+        <h3>..PASSION FOR DESIGN</h3>
+      </footer>
     </section>
   </body>
 </html>
