--- a/forside.html
+++ b/forside.html
@@ -20,7 +20,7 @@
               <a href="">forside</a>
             </li>
             <li>
-              <a href="">portfolio</a>
+              <a href="portfolio.html">portfolio</a>
             </li>
             <li>
               <a href="om.html">om mig</a>
