--- a/om.html
+++ b/om.html
@@ -23,7 +23,7 @@
                 <a href="forside.html">forside</a>
               </li>
               <li>
-                <a href="">portfolio</a>
+                <a href="portfolio.html">portfolio</a>
               </li>
               <li>
                 <a href="om.html">om mig</a>
