--- a/portfolio.html
+++ b/portfolio.html
@@ -4,22 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="forside.css" />
+    <link rel="stylesheet" href="portfolio.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Faster+One&family=Montserrat:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>Forside</title>
+    <title>Portfolio</title>
   </head>
-  <body>
-    <section id="first_section">
+  <body> 
       <header>
         <nav>
           <ul>
             <li>
-              <a href="">forside</a>
+              <a href="forside.html">forside</a>
             </li>
             <li>
               <a href="portfolio.html">portfolio</a>
@@ -30,13 +29,10 @@
           </ul>
         </nav>
       </header>
-      <div class="splash-billede_tekst">
-        <h1>
-          PASSION <br />
-          FOR <br />
-          DESIGN
-        </h1>
-      </div>
+      <section id="first_section">
+        <div class="tekst_ramme"></div>
     </section>
+    </main>
+<footer></footer>
   </body>
 </html>
