--- a/portfolio.html
+++ b/portfolio.html
@@ -13,26 +13,108 @@
     />
     <title>Portfolio</title>
   </head>
-  <body> 
-      <header>
-        <nav>
-          <ul>
-            <li>
-              <a href="forside.html">forside</a>
-            </li>
-            <li>
-              <a href="portfolio.html">portfolio</a>
-            </li>
-            <li>
-              <a href="om.html">om mig</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <section id="first_section">
-        <div class="tekst_ramme"></div>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="forside.html">forside</a>
+          </li>
+          <li>
+            <a href="portfolio.html">portfolio</a>
+          </li>
+          <li>
+            <a href="om.html">om mig</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <div class="splash-billede">
+      <img
+        src="/Billeder/portfolio_photoshop@2x.png"
+        alt="splash-billede"
+        width="90%"
+      />
+    </div>
+
+    <br />
+
+    <section id="first_section">
+      <div class="tema_2">
+        <h2>TEMA 2</h2>
+        <h3>02.04.02 responsive_site_v2</h3>
+        <p>
+          I Tema 2 lærte vi om layout, komposition, farver, grafisk design samt
+          grundlæggende HTML og CSS. Vi fik til opgave at kode en hjemmeside
+          individuelt, hvor vi skulle demonstrere den viden, vi havde fået. Vi
+          blev inddelt i grupper, hvor vi fik tildelt en stilart, vi skulle kode
+          hjemmesiden ud fra – vi fik stilarten Brutalism.
+          <br />
+          <br />
+          Jeg lagde ud med at læse om stilarten i powerpointet: ”præsentation af
+          udvalgte stile” og på hjemmesiden: <br />
+          https://trendjackers.com/brutalist-website-design-brutalism/.
+          <br />
+          <br />
+          Jeg fandt ud af, at stilarten tog form i undergrundsmiljøet i 60’erne
+          og 70’erne, som var præget af anarkisme og radikal branding. Stilarten
+          bærer også præg af, at designet ikke skal være pænt eller symmetrisk,
+          det skal revolutionere. Det blev derfor disse 3 nøgleord, der skulle
+          forme designet på min hjemmeside; modig, provokerende og radikal. Kort
+          efter ideen til hvilken historie min hjemmeside skulle fortælle,
+          nemlig den aktuelle #metoo bølge.
+          <br />
+          <br />
+          For at kunne skabe en brutalistisk stil på min hjemmeside, måtte jeg
+          finde noget teori omkring layout, komposition og farver. Jeg så
+          videoer på Linkedin-Learning med grafisk design ekspert Sean Adams,
+          som netop fortæller om layout, farver og komposition. Det jeg tog med
+          mig var, at for at skabe dynamik og et modigt udtryk i sit grafiske
+          design, må man tage chancer. Man må arbejde med forskellige størrelser
+          og farver der står i kontrast til hinanden.
+          <br />
+          <br />
+          Desuden gjorde jeg brug af teori om farve harmoni, herunder teorien
+          ”farveskema baseret på komplementære farver,” da jeg ønskede at
+          anvende farver, som stod i stor kontrast til hinanden, for at fange
+          brugeren med det samme, hun besøger sitet.
+          <br />
+          <br />
+          Ift. kodning, lærte jeg at kode i HTML, hvor jeg lærte at kode
+          overskrifter, tekst, lister, menuer m.m. I HTML kodede ’skelettet’ jeg
+          til hjemmesiden. Jeg lærte også at kode i CSS, hvor jeg lærte at style
+          hjemmesiden i det design, jeg havde valgt. I CSS gav mig indsigt i
+          hvordan man fx indsætter farver til baggrund og tekst og hvordan man
+          laver et ’grid’, som er en metode man anvender til opsætning af tekst,
+          billeder, figurer m.m.
+          <br />
+          <br />
+          Nedenfor kan I se nogle screenshots af min proces.
+        </p>
+      </div>
+
+      <div class="tema_3">
+        <h2>TEMA 3</h2>
+        <h3>03.02.06 Prototype 2</h3>
+        <h3>03.03.03 Pitch</h3>
+      </div>
+
+      <div class="tema_4">
+        <h2>TEMA 4</h2>
+        <h3>04.05.03 Temaopgave</h3>
+      </div>
+
+      <div class="tema_5">
+        <h2>TEMA 5</h2>
+        <h3>
+          05.01.01 Pilotprojekt Video og foto produktion indsat i HTML/CSS/JS
+        </h3>
+        <h3>05.02.01 Redesign og temadokumentation</h3>
+      </div>
     </section>
-    </main>
-<footer></footer>
+    <footer>
+      <h3>..PASSION FOR DESIGN</h3>
+    </footer>
   </body>
 </html>
