--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
           og 70’erne, som var præget af anarkisme og radikal branding. Stilarten
           bærer også præg af, at designet ikke skal være pænt eller symmetrisk,
           det skal revolutionere. Det blev derfor disse 3 nøgleord, der skulle
-          forme designet på min hjemmeside; modig, provokerende og radikal. Kort
+          forme designet på min hjemmeside; modig, provokerende og ukonventionel. Kort
           efter ideen til hvilken historie min hjemmeside skulle fortælle,
           nemlig den aktuelle #metoo bølge.
           <br />
@@ -89,15 +89,42 @@
           laver et ’grid’, som er en metode man anvender til opsætning af tekst,
           billeder, figurer m.m.
           <br />
-          <br />
-          Nedenfor kan I se nogle screenshots af min proces.
+          <br>
+          <i>Nedenfor ses mit splashbillede til dette tema.
+          </i>
         </p>
-      </div>
+        <div class="tema_2_billeder">
+          <img
+          src="/Billeder/tema_2_skitse.jpg"
+          alt="splash-billede"
+          width="40%"
+        />
+        <img
+          src="/Billeder/tema_2_splash.jpg"
+          alt="splash-billede"
+          width="40%"
+        />
+        </div>
+        <h4>Link til hjemmeside: https://sarakondrup.dk/kea/02_web/04_responsiv/responsiv_site_v2/</h4> 
 
       <div class="tema_3">
         <h2>TEMA 3</h2>
         <h3>03.02.06 Prototype 2</h3>
+        <p>
+          I tema 3 lærte vi teorien bag grundlæggende UX og udvalgte UX-metoder. UX-metoderne bestod bl.a. af  desk-research, konceptudvikling, sketching og test. 
+          UX står for ’user experience’, som kort sagt er brugerens oplevelse af en hjemmeside.
+          <br>
+          <br>
+          I tråd med ovenstående, fik vi til opgave at lave en prototype af en hjemmeside i programmet XD, som skulle testes af brugere. 
+          <br>
+          <br>
+          Opgaven lød på, at vi skulle sælge t-shirts, men ellers lå det os frit for, hvad konceptet bag produktet skulle være. Prototypen skulle desuden gøres responsiv og linkes til, så man kunne ”prøve hjemmesiden af.”
+        </p>
         <h3>03.03.03 Pitch</h3>
+        <p>
+        Klik på linket nedenfor, for at se powerpointet til min pitch.
+        </p>
+        <h4>Link: https://studkea-my.sharepoint.com/:p:/g/personal/sara02d7_stud_kea_dk/EQqUI6W-DTtEq8gVlcoPC-8B6_1zr5FFDrGsKOp6WG264w?e=GY6dWJ </h4>
       </div>
 
       <div class="tema_4">
