--- a/om.html
+++ b/om.html
@@ -198,5 +198,6 @@
         <h3>..PASSION FOR DESIGN</h3>
       </footer>
     </section>
+    <script src="index.js"></script>
   </body>
 </html>
