--- a/portfolio.html
+++ b/portfolio.html
@@ -198,6 +198,7 @@
         Link til hjemmeside: https://condescending-almeida-962eca.netlify.app/ 
       </h4>
       </div>
+      <button onclick="topFunction()" id="button" title="Go to top">Top</button>
     </section>
     <footer>
       <h3>..PASSION FOR DESIGN</h3>
