--- a/om.html
+++ b/om.html
@@ -193,11 +193,11 @@
       </div>
 
       <br />
-
-      <footer>
-        <h3>..PASSION FOR DESIGN</h3>
-      </footer>
+      <button onclick="topFunction()" id="button" title="Go to top">Top</button>
     </section>
+    <footer>
+      <h3>..PASSION FOR DESIGN</h3>
+    </footer>
     <script src="index.js"></script>
   </body>
 </html>
