--- a/forside.html
+++ b/forside.html
@@ -19,13 +19,13 @@
         <nav>
           <ul>
             <li>
-              <a href="">forside</a>
+              <a href="">Forside</a>
             </li>
             <li>
-              <a href="portfolio.html">portfolio</a>
+              <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a href="om.html">om mig</a>
+              <a href="om.html">Om mig</a>
             </li>
           </ul>
         </nav>
