--- a/om.html
+++ b/om.html
@@ -19,13 +19,13 @@
         <nav>
           <ul>
             <li>
-              <a href="forside.html">forside</a>
+              <a href="forside.html">Forside</a>
             </li>
             <li>
-              <a href="portfolio.html">portfolio</a>
+              <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a href="om.html">om mig</a>
+              <a href="om.html">Om mig</a>
             </li>
           </ul>
         </nav>
@@ -193,11 +193,13 @@
       </div>
 
       <br />
+
       <button onclick="topFunction()" id="button" title="Go to top">Top</button>
+
+      <footer>
+        <h3>..PASSION FOR DESIGN</h3>
+      </footer>
     </section>
-    <footer>
-      <h3>..PASSION FOR DESIGN</h3>
-    </footer>
     <script src="index.js"></script>
   </body>
 </html>
