--- a/portfolio.html
+++ b/portfolio.html
@@ -18,13 +18,13 @@
       <nav>
         <ul>
           <li>
-            <a href="forside.html">forside</a>
+            <a href="forside.html">Forside</a>
           </li>
           <li>
-            <a href="portfolio.html">portfolio</a>
+            <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="om.html">om mig</a>
+            <a href="om.html">Om mig</a>
           </li>
         </ul>
       </nav>
@@ -61,9 +61,9 @@
           og 70’erne, som var præget af anarkisme og radikal branding. Stilarten
           bærer også præg af, at designet ikke skal være pænt eller symmetrisk,
           det skal revolutionere. Det blev derfor disse 3 nøgleord, der skulle
-          forme designet på min hjemmeside; modig, provokerende og ukonventionel. Kort
-          efter ideen til hvilken historie min hjemmeside skulle fortælle,
-          nemlig den aktuelle #metoo bølge.
+          forme designet på min hjemmeside; modig, provokerende og
+          ukonventionel. Kort efter ideen til hvilken historie min hjemmeside
+          skulle fortælle, nemlig den aktuelle #metoo bølge.
           <br />
           <br />
           For at kunne skabe en brutalistisk stil på min hjemmeside, måtte jeg
@@ -89,54 +89,94 @@
           laver et ’grid’, som er en metode man anvender til opsætning af tekst,
           billeder, figurer m.m.
           <br />
-          
-        <h4>Link til hjemmeside: https://sarakondrup.dk/kea/02_web/04_responsiv/responsiv_site_v2/</h4> 
-
-      <div class="tema_3">
-        <h2>TEMA 3</h2>
-        <h3>03.02.06 Prototype 2</h3>
-        <p>
-          I tema 3 lærte vi teorien bag grundlæggende UX og udvalgte UX-metoder. UX-metoderne bestod bl.a. af  desk-research, konceptudvikling, sketching og test. 
-          UX står for ’user experience’, som kort sagt er brugerens oplevelse af en hjemmeside.
-          <br>
-          <br>
-          I tråd med ovenstående, fik vi til opgave at lave en prototype af en hjemmeside i programmet XD, som skulle testes af brugere. 
-          <br>
-          <br>
-          Opgaven lød på, at vi skulle sælge t-shirts, men ellers lå det os frit for, hvad konceptet bag produktet skulle være. Prototypen skulle desuden gøres responsiv og linkes til, så man kunne ”prøve hjemmesiden af.”
-       <br>
-       <br>
-       Klik på linket nedenfor, for at se min prototype.
         </p>
 
-        <h4>Link til prototype: https://xd.adobe.com/view/5d34b358-bd41-460e-a73b-2b762a5438af-0867/ </h4>
+        <div class="link">
+          <a
+            href="https://sarakondrup.dk/kea/02_web/04_responsiv/responsiv_site_v2/"
+            >Responsiv site</a
+          >
+        </div>
 
-        <h3>03.03.03 Pitch</h3>
-        <p>
-        Klik på linket nedenfor, for at se powerpointet til min pitch.
-        </p>
-        <h4>Link: https://studkea-my.sharepoint.com/:p:/g/personal/sara02d7_stud_kea_dk/EQqUI6W-DTtEq8gVlcoPC-8B6_1zr5FFDrGsKOp6WG264w?e=GY6dWJ </h4>
+        <div class="tema_3">
+          <h2>TEMA 3</h2>
+          <h3>03.02.06 Prototype 2</h3>
+          <p>
+            I tema 3 lærte vi teorien bag grundlæggende UX og udvalgte
+            UX-metoder. UX-metoderne bestod bl.a. af desk-research,
+            konceptudvikling, sketching og test. UX står for ’user experience’,
+            som kort sagt er brugerens oplevelse af en hjemmeside.
+            <br />
+            <br />
+            I tråd med ovenstående, fik vi til opgave at lave en prototype af en
+            hjemmeside i programmet XD, som skulle testes af brugere.
+            <br />
+            <br />
+            Opgaven lød på, at vi skulle sælge t-shirts, men ellers lå det os
+            frit for, hvad konceptet bag produktet skulle være. Prototypen
+            skulle desuden gøres responsiv og linkes til, så man kunne ”prøve
+            hjemmesiden af.”
+            <br />
+            <br />
+            Klik på linket nedenfor, for at se min prototype.
+          </p>
+          <div class="link">
+            <a
+              href="https://xd.adobe.com/view/5d34b358-bd41-460e-a73b-2b762a5438af-0867/"
+              >Prototype</a
+            >
+          </div>
+
+          <h3>03.03.03 Pitch</h3>
+          <p>Klik på linket nedenfor, for at se powerpointet til min pitch.</p>
+          <div class="link">
+          <a
+            href="https://studkea-my.sharepoint.com/:p:/g/personal/sara02d7_stud_kea_dk/EQqUI6W-DTtEq8gVlcoPC-8B6_1zr5FFDrGsKOp6WG264w?e=GY6dWJ"
+            >Pitch</a
+          >
+        </div>
       </div>
 
       <div class="tema_4">
         <h2>TEMA 4</h2>
         <h3>04.05.03 Temaopgave</h3>
         <p>
-          I tema 4 lærte vi om grundlæggende animation. Opgaven havde til formål at illustrere og kode et (video)spil.<br> 
-          Spilfigurer og elementer skulle skitses i hånden for så derefter at blive illustreret i programmet Adobe Illustrator. Måden jeg lærte at tegne i Illustrator på var gennem youtube videoer lavet af vores undervisere. 
-          <br>
-          <br>
-          Jeg lærte også om filformater, bl.a. fordi tegningerne i illustrator skulle gemmes som SVG-filer, før de skulle kodes ind i spillet. Dette havde noget at gøre med, at billederne skulle være skalérbare samtidig med at fastholde skarpheden. 
-          <br>
-          <br>
-          Kodningen skulle foregå i HTML, CSS og Javascript. I det her tema lærte jeg for første gang at kode i javascript, som bl.a. skulle være behjælpelig med at få ting til at bevæge sig i spillet. Desuden lærte jeg at udforme et state-machine diagram, som skulle hjælpe mig med opsætningen af mit spil i forhold til kodningen. Alt kodning lærte jeg gennem undervisning af disse programmer. 
-          <br>
-          <br>
-          En mere detaljeret beskrivelse af min proces af spillet har jeg dokumenteret i linket nedenfor. 
-          Klik på ”Link til design dokumentation.”
+          I tema 4 lærte vi om grundlæggende animation. Opgaven havde til formål
+          at illustrere og kode et (video)spil.<br />
+          Spilfigurer og elementer skulle skitses i hånden for så derefter at
+          blive illustreret i programmet Adobe Illustrator. Måden jeg lærte at
+          tegne i Illustrator på var gennem youtube videoer lavet af vores
+          undervisere.
+          <br />
+          <br />
+          Jeg lærte også om filformater, bl.a. fordi tegningerne i illustrator
+          skulle gemmes som SVG-filer, før de skulle kodes ind i spillet. Dette
+          havde noget at gøre med, at billederne skulle være skalérbare samtidig
+          med at fastholde skarpheden.
+          <br />
+          <br />
+          Kodningen skulle foregå i HTML, CSS og Javascript. I det her tema
+          lærte jeg for første gang at kode i javascript, som bl.a. skulle være
+          behjælpelig med at få ting til at bevæge sig i spillet. Desuden lærte
+          jeg at udforme et state-machine diagram, som skulle hjælpe mig med
+          opsætningen af mit spil i forhold til kodningen. Alt kodning lærte jeg
+          gennem undervisning af disse programmer.
+          <br />
+          <br />
+          En mere detaljeret beskrivelse af min proces af spillet har jeg
+          dokumenteret i linket nedenfor. Klik på ”Link til design
+          dokumentation.”
         </p>
-        <h4>Link til design dokumentation: https://sarakondrup.dk/kea/04-animation/spil/</h4>
-        <h4>Link til spil: https://sarakondrup.dk/kea/04-animation/spil/spil.html </h4>
+      </div>
+
+      <div class="link">
+        <a href="https://sarakondrup.dk/kea/04-animation/spil/spil.html"
+          >Design dokumentaion</a
+        >
+      </div>
+      <br>
+      <div class="link">
+        <a href="https://sarakondrup.dk/kea/04-animation/spil/">Spil</a>
       </div>
 
       <div class="tema_5">
@@ -145,59 +185,105 @@
           05.01.01 Pilotprojekt Video og foto produktion indsat i HTML/CSS/JS
         </h3>
         <p>
-          I forløbet ’Pilotprojekt Video og foto produktion indsat i HTML/CSS/JS, fik vi til opgave at interview og filme en person med en passion. <br> Videoen måtte max vare et minut. Formålet med dette projekt var at lære at filme og klippe og redigere en video i programmet Premiere Pro. Videoen skulle efterfølgende præsenteres på en hjemmeside med tilhørende tekst og billeder. 
-          <br> 
-          <br>
-          I programmet Premiere Pro lærte jeg metoder til hvordan man klipper en video, indsætter tekst og fader lyd ud og ind. 
-          <br> 
-          <br>
+          I forløbet ’Pilotprojekt Video og foto produktion indsat i
+          HTML/CSS/JS, fik vi til opgave at interview og filme en person med en
+          passion. <br />
+          Videoen måtte max vare et minut. Formålet med dette projekt var at
+          lære at filme og klippe og redigere en video i programmet Premiere
+          Pro. Videoen skulle efterfølgende præsenteres på en hjemmeside med
+          tilhørende tekst og billeder.
+          <br />
+          <br />
+          I programmet Premiere Pro lærte jeg metoder til hvordan man klipper en
+          video, indsætter tekst og fader lyd ud og ind.
+          <br />
+          <br />
           Klik på linket nedenfor, for at se video samt hjemmeside.
         </p>
-        <h4>Link: </h4>
+        <div class="link">
+          <a href="">Pilotprojekt</a>
+        </div>
 
         <h3>05.02.01 Redesign og temadokumentation</h3>
         <p>
-          I forløbet ’Redesign og temadokumentation’ fik vi til opgave at lave et redesign af en virksomheds hjemmeside, som skulle udmønte sig en i en ny og måske forbedret version. 
-          <br> 
-          <br>
-          I opgaven benyttede vi os af metoder og værktøjer, som vi har lært igennem alle temaerne på semestret. Det var bl.a. metoder som, interview, desk-research og test. Teorier om layoutprincipper, komposition og farver. Værktøjer som Adobe XD, Adobe Color, Illustrator, HTML, CSS og Javascript.   
-          <br>
-          <br>
-            Min gruppe og jeg valgte at teame op med en mine venner, Louise Møller(Louise), som har sin egen virksomhed, hvor hun behandler med kropsterapi. 
-            I projektet om redesign, havde jeg primært ansvar for det visuelle design af hjemmesiden, lige med undtagelse af at finde fonte. Jeg stod for at tale med Louise ift. ønsker omkring layout og æstetik.
-        <br>
-        <br>
-        Fordi jeg i forvejen kendte vores kunde, Louise, spurgte jeg ikke indtil dette. 
-        Hvis jeg ikke kendte Louise i forvejen, ville jeg have sat mig ned med hende og taget en snak med hende omkring hendes ønsker ved at stille hende de ikke-ledene spørgsmål. 
-        Så som: <br> <i>"Hvordan vil du beskrive dig selv, som menneske"</i>, <br> <i>"Hvis du skulle beskrive behandlingsformen kropsterapi med tre tillægsord, hvilke skulle det så være?"</i>, <br> <i>"Hvem er din målgruppe"</i>.
-        <br>
-        <br>  
-        Ud fra Louises ønsker, gik jeg i gang med at udarbejde 4 forskellige styletiles. Jeg gik ind og læste om de forskellige stilarter i powerpointet ”præsentation af udvalgte stile” og læste mere indgående om den minimalistiske stil, som jeg tog noter til. 
-        <br>
-        <br>
-        Derefter gik jeg ind i powerpointet ” farvelære_E21” for at researche på farver, som tog mig videre til hjemmesiden: https://www.colormatters.com/color-and-design/basic-color-theory . Her læste jeg om Color & Design af J. L. Morton, hvor jeg fik jeg viden om, hvordan man danner hvilke farver, og hvilke forskellige teorier, der findes indenfor begrebet farve harmoni. 
-        <br>
-        <br>
-        Med den viden, gik jeg ind på Pinterest og for at hente inspiration til mine styletiles. 
-        Ud fra de billeder jeg havde fundet på Pinterest, udvalgte jeg 4 forskellige billeder, som jeg en efter en satte ind i Adobe Colors, og udtrak 4 forskellige farveskeamer af. Meningen var, at hvert farveskema skulle tage udgangspunkt i en teori om farve harmoni. 
-        De færdige farveskemaer hev jeg ind i programmet XD, hvor jeg lavede forskellige 4 styletiles. Til inspiration af opsætning af et styletile, kiggede jeg på powerpointet ”moodboard og styletile”. 
-        <br>
-        <br>
-        De 4 styletiles blev præsenteret for Louise. Herefter blev det endelig design besluttet og jeg udformede et endeligt styletile, som vi gik med. 
-        <br>
-        <br>
-        Sidst skal det også nævnes, at jeg tegnede et logo til Louise i Illustrator, hvor jeg forsøgte mig i at lave en Sans Serif font. 
-        <br> 
-        <br>
-        Logoet endte vi med at bruge til introen i den video, vi tog af Louise til hjemmesiden. 
-        <br>
-        <br>
-        Klik på linket nedenfor, for at se det endelige redesign af Louises hjemmeside. 
-      </p>
-      <h4>
-        Link til hjemmeside: https://condescending-almeida-962eca.netlify.app/ 
-      </h4>
+          I forløbet ’Redesign og temadokumentation’ fik vi til opgave at lave
+          et redesign af en virksomheds hjemmeside, som skulle udmønte sig en i
+          en ny og måske forbedret version.
+          <br />
+          <br />
+          I opgaven benyttede vi os af metoder og værktøjer, som vi har lært
+          igennem alle temaerne på semestret. Det var bl.a. metoder som,
+          interview, desk-research og test. Teorier om layoutprincipper,
+          komposition og farver. Værktøjer som Adobe XD, Adobe Color,
+          Illustrator, HTML, CSS og Javascript.
+          <br />
+          <br />
+          Min gruppe og jeg valgte at teame op med en mine venner, Louise
+          Møller(Louise), som har sin egen virksomhed, hvor hun behandler med
+          kropsterapi. I projektet om redesign, havde jeg primært ansvar for det
+          visuelle design af hjemmesiden, lige med undtagelse af at finde fonte.
+          Jeg stod for at tale med Louise ift. ønsker omkring layout og æstetik.
+          <br />
+          <br />
+          Fordi jeg i forvejen kendte vores kunde, Louise, spurgte jeg ikke
+          indtil dette. Hvis jeg ikke kendte Louise i forvejen, ville jeg have
+          sat mig ned med hende og taget en snak med hende omkring hendes ønsker
+          ved at stille hende de ikke-ledene spørgsmål. Så som: <br />
+          <i>"Hvordan vil du beskrive dig selv, som menneske"</i>, <br />
+          <i
+            >"Hvis du skulle beskrive behandlingsformen kropsterapi med tre
+            tillægsord, hvilke skulle det så være?"</i
+          >, <br />
+          <i>"Hvem er din målgruppe"</i>.
+          <br />
+          <br />
+          Ud fra Louises ønsker, gik jeg i gang med at udarbejde 4 forskellige
+          styletiles. Jeg gik ind og læste om de forskellige stilarter i
+          powerpointet ”præsentation af udvalgte stile” og læste mere indgående
+          om den minimalistiske stil, som jeg tog noter til.
+          <br />
+          <br />
+          Derefter gik jeg ind i powerpointet ” farvelære_E21” for at researche
+          på farver, som tog mig videre til hjemmesiden:
+          https://www.colormatters.com/color-and-design/basic-color-theory . Her
+          læste jeg om Color & Design af J. L. Morton, hvor jeg fik jeg viden
+          om, hvordan man danner hvilke farver, og hvilke forskellige teorier,
+          der findes indenfor begrebet farve harmoni.
+          <br />
+          <br />
+          Med den viden, gik jeg ind på Pinterest og for at hente inspiration
+          til mine styletiles. Ud fra de billeder jeg havde fundet på Pinterest,
+          udvalgte jeg 4 forskellige billeder, som jeg en efter en satte ind i
+          Adobe Colors, og udtrak 4 forskellige farveskeamer af. Meningen var,
+          at hvert farveskema skulle tage udgangspunkt i en teori om farve
+          harmoni. De færdige farveskemaer hev jeg ind i programmet XD, hvor jeg
+          lavede forskellige 4 styletiles. Til inspiration af opsætning af et
+          styletile, kiggede jeg på powerpointet ”moodboard og styletile”.
+          <br />
+          <br />
+          De 4 styletiles blev præsenteret for Louise. Herefter blev det endelig
+          design besluttet og jeg udformede et endeligt styletile, som vi gik
+          med.
+          <br />
+          <br />
+          Sidst skal det også nævnes, at jeg tegnede et logo til Louise i
+          Illustrator, hvor jeg forsøgte mig i at lave en Sans Serif font.
+          <br />
+          <br />
+          Logoet endte vi med at bruge til introen i den video, vi tog af Louise
+          til hjemmesiden.
+          <br />
+          <br />
+          Klik på linket nedenfor, for at se det endelige redesign af Louises
+          hjemmeside.
+        </p>
       </div>
+      <div class="link">
+        <a href="https://condescending-almeida-962eca.netlify.app/ "
+          >Redesign</a
+        >
+      </div>
+
       <button onclick="topFunction()" id="button" title="Go to top">Top</button>
     </section>
     <footer>
