--- a/om.html
+++ b/om.html
@@ -61,8 +61,7 @@
       <div class="overskrift_2">
         <h2>
           “Som person er jeg ret eftertænksom, og det udspiller sig i alt jeg
-          laver. <br />
-          Både i mit arbejdsliv og privatliv.”
+          laver. Både i mit arbejdsliv og privatliv.”
         </h2>
       </div>
 
