--- a/forside.html
+++ b/forside.html
@@ -19,7 +19,7 @@
         <nav>
           <ul>
             <li>
-              <a href="">Forside</a>
+              <a href="forside.html">Forside</a>
             </li>
             <li>
               <a href="portfolio.html">Portfolio</a>
