--- a/portfolio.html
+++ b/portfolio.html
@@ -53,10 +53,12 @@
           <br />
           <br />
           Jeg lagde ud med at læse om stilarten i powerpointet: ”præsentation af
-          udvalgte stile” og på hjemmesiden: <br />
-          https://trendjackers.com/brutalist-website-design-brutalism/.
-          <br />
-          <br />
+          udvalgte stile” og på hjemmesiden:
+          <a href="https://trendjackers.com/brutalist-website-design-brutalism/"
+            >https://trendjackers.com/brutalist-website-design-brutalism/</a
+          >
+        </p>
+        <p>
           Jeg fandt ud af, at stilarten tog form i undergrundsmiljøet i 60’erne
           og 70’erne, som var præget af anarkisme og radikal branding. Stilarten
           bærer også præg af, at designet ikke skal være pænt eller symmetrisk,
@@ -89,6 +91,8 @@
           laver et ’grid’, som er en metode man anvender til opsætning af tekst,
           billeder, figurer m.m.
           <br />
+          <br />
+          Klik på linket nedenfor, for at se hjemmesiden.
         </p>
 
         <div class="link">
@@ -97,39 +101,40 @@
             >Responsiv site</a
           >
         </div>
+      </div>
 
-        <div class="tema_3">
-          <h2>TEMA 3</h2>
-          <h3>03.02.06 Prototype 2</h3>
-          <p>
-            I tema 3 lærte vi teorien bag grundlæggende UX og udvalgte
-            UX-metoder. UX-metoderne bestod bl.a. af desk-research,
-            konceptudvikling, sketching og test. UX står for ’user experience’,
-            som kort sagt er brugerens oplevelse af en hjemmeside.
-            <br />
-            <br />
-            I tråd med ovenstående, fik vi til opgave at lave en prototype af en
-            hjemmeside i programmet XD, som skulle testes af brugere.
-            <br />
-            <br />
-            Opgaven lød på, at vi skulle sælge t-shirts, men ellers lå det os
-            frit for, hvad konceptet bag produktet skulle være. Prototypen
-            skulle desuden gøres responsiv og linkes til, så man kunne ”prøve
-            hjemmesiden af.”
-            <br />
-            <br />
-            Klik på linket nedenfor, for at se min prototype.
-          </p>
-          <div class="link">
-            <a
-              href="https://xd.adobe.com/view/5d34b358-bd41-460e-a73b-2b762a5438af-0867/"
-              >Prototype</a
-            >
-          </div>
+      <div class="tema_3">
+        <h2>TEMA 3</h2>
+        <h3>03.02.06 Prototype 2</h3>
+        <p>
+          I tema 3 lærte vi teorien bag grundlæggende UX og udvalgte UX-metoder.
+          UX-metoderne bestod bl.a. af desk-research, konceptudvikling,
+          sketching og test. UX står for ’user experience’, som kort sagt er
+          brugerens oplevelse af en hjemmeside.
+          <br />
+          <br />
+          I tråd med ovenstående, fik vi til opgave at lave en prototype af en
+          hjemmeside i programmet XD, som skulle testes af brugere.
+          <br />
+          <br />
+          Opgaven lød på, at vi skulle sælge t-shirts, men ellers lå det os frit
+          for, hvad konceptet bag produktet skulle være. Prototypen skulle
+          desuden gøres responsiv og linkes til, så man kunne klikke sig rundt
+          ”prøve hjemmesiden af.”
+          <br />
+          <br />
+          Klik på linket nedenfor, for at se min prototype.
+        </p>
+        <div class="link">
+          <a
+            href="https://xd.adobe.com/view/5d34b358-bd41-460e-a73b-2b762a5438af-0867/"
+            >Prototype</a
+          >
+        </div>
 
-          <h3>03.03.03 Pitch</h3>
-          <p>Klik på linket nedenfor, for at se powerpointet til min pitch.</p>
-          <div class="link">
+        <h3>03.03.03 Pitch</h3>
+        <p>Klik på linket nedenfor, for at se powerpointet til min pitch.</p>
+        <div class="link">
           <a
             href="https://studkea-my.sharepoint.com/:p:/g/personal/sara02d7_stud_kea_dk/EQqUI6W-DTtEq8gVlcoPC-8B6_1zr5FFDrGsKOp6WG264w?e=GY6dWJ"
             >Pitch</a
@@ -167,16 +172,16 @@
           dokumenteret i linket nedenfor. Klik på ”Link til design
           dokumentation.”
         </p>
-      </div>
 
-      <div class="link">
-        <a href="https://sarakondrup.dk/kea/04-animation/spil/spil.html"
-          >Design dokumentaion</a
-        >
-      </div>
-      <br>
-      <div class="link">
-        <a href="https://sarakondrup.dk/kea/04-animation/spil/">Spil</a>
+        <div class="link">
+          <a href="https://sarakondrup.dk/kea/04-animation/spil/spil.html"
+            >Design dokumentaion</a
+          >
+        </div>
+        <br />
+        <div class="link">
+          <a href="https://sarakondrup.dk/kea/04-animation/spil/">Spil</a>
+        </div>
       </div>
 
       <div class="tema_5">
@@ -228,13 +233,15 @@
           Fordi jeg i forvejen kendte vores kunde, Louise, spurgte jeg ikke
           indtil dette. Hvis jeg ikke kendte Louise i forvejen, ville jeg have
           sat mig ned med hende og taget en snak med hende omkring hendes ønsker
-          ved at stille hende de ikke-ledene spørgsmål. Så som: <br />
-          <i>"Hvordan vil du beskrive dig selv, som menneske"</i>, <br />
+          ved at stille hende de ikke-ledene spørgsmål. Så som:
+          <br />
+          <i>"Hvordan vil du beskrive dig selv, som menneske?"</i>
+          <br />
           <i
             >"Hvis du skulle beskrive behandlingsformen kropsterapi med tre
             tillægsord, hvilke skulle det så være?"</i
           >, <br />
-          <i>"Hvem er din målgruppe"</i>.
+          <i>"Hvem er din målgruppe?"</i>
           <br />
           <br />
           Ud fra Louises ønsker, gik jeg i gang med at udarbejde 4 forskellige
@@ -245,10 +252,16 @@
           <br />
           Derefter gik jeg ind i powerpointet ” farvelære_E21” for at researche
           på farver, som tog mig videre til hjemmesiden:
-          https://www.colormatters.com/color-and-design/basic-color-theory . Her
-          læste jeg om Color & Design af J. L. Morton, hvor jeg fik jeg viden
-          om, hvordan man danner hvilke farver, og hvilke forskellige teorier,
-          der findes indenfor begrebet farve harmoni.
+          <a
+            href="https://www.colormatters.com/color-and-design/basic-color-theory"
+          >
+            https://www.colormatters.com/color-and-design/basic-color-theory</a
+          >
+        </p>
+        <p>
+          Her læste jeg om Color & Design af J. L. Morton, hvor jeg fik jeg
+          viden om, hvordan man danner hvilke farver, og hvilke forskellige
+          teorier, der findes indenfor begrebet farve harmoni.
           <br />
           <br />
           Med den viden, gik jeg ind på Pinterest og for at hente inspiration
@@ -277,11 +290,86 @@
           Klik på linket nedenfor, for at se det endelige redesign af Louises
           hjemmeside.
         </p>
+
+        <div class="link">
+          <a href="https://condescending-almeida-962eca.netlify.app/ "
+            >Redesign</a
+          >
+        </div>
       </div>
-      <div class="link">
-        <a href="https://condescending-almeida-962eca.netlify.app/ "
-          >Redesign</a
-        >
+
+      <div class="tema_6">
+        <h2>TEMA 6</h2>
+        <h3>Portfolio</h3>
+        <h4>Plan for udførelse af portfolio</h4>
+        <div class="liste">
+          <p>
+            1. Kig i powerpoint:
+            <a
+              href="https://kea-fronter.itslearning.com/ContentArea/ContentArea.aspx?LocationID=4619&LocationType=1 "
+            >
+              https://kea-fronter.itslearning.com/ContentArea/ContentArea.aspx?LocationID=4619&LocationType=1
+            </a>
+            til inspiration til stilart på hjemmeside
+            <br />
+            <br />
+            2. Lav moodboard i XD
+            <br />
+            <br />
+            3. Research på Pinterest for inspiration til stilart - Søgeord:
+            digital retro design, minimastic, portfolio design, graphic fashion
+            trends, - Screenshot alt der inspirerer mig
+            <br />
+            <br />
+            4. Læs:
+            <a
+              href=" https://www.webfx.com/blog/web-design/modern-web-design/ "
+            >
+              https://www.webfx.com/blog/web-design/modern-web-design/
+            </a>
+            til design inspiration på hjemmeside.
+            <br />
+            - Beslut 3 trends for 2022, der skal indgå: - Meget whitespace -
+            Grid design - En ”bold font” til overskrift 1
+            <br />
+            <br />
+            5. Lav crazy 8 over: forside, portfolio, om mig
+            <br />
+            - Udvælg de bedste til prototype
+            <br />
+            <br />
+            6. Find fonte (evt google fonts) - Overskrift 1, overskrift 2,
+            brødtekst - Download fonte så de kan bruges i XD
+            <br />
+            <br />
+            7. Lav styletile i XD og inkluder følgende:
+            <br />
+            - Font i overskrift + brødtekst + links, farveskema (sæt evt
+            moodboard ind i adobe colors) , splashbillede, evt favikon
+            <br />
+            <br />
+            8. Lav prototype i XD (ikke responsiv)
+            <br />
+            - Se:
+            <a
+              href=" https://www.linkedin.com/learning/creating-a-design-system-with-adobe-xd-2/creating-a-design-system-with-adobe-xd?autoAdvance=true&autoSkip=false&autoplay=true&resume=true&u=36836804"
+            >
+              https://www.linkedin.com/learning/creating-a-design-system-with-adobe-xd-2/creating-a-design-system-with-adobe-xd?autoAdvance=true&autoSkip=false&autoplay=true&resume=true&u=36836804</a
+            >
+            af Damian Borba for at opfriske hukommelse på UI kit.
+            <br />
+            <br />
+            - Brug UI elementer fra wireframes_web + pwa-studio-uikit
+            <br />
+            <br />
+            - Udførelse af prototype herunder inddragelse det jeg har lavet på
+            studie + personlige billeder m.m der beskriver hvem jeg er
+            <br />
+            <br />
+            9. Kodning af hjemmeside i VSCODE - Forbind med github - Lav HTML,
+            CSS, JAVASCRIPT
+          </p>
+        </div>
       </div>
 
       <button onclick="topFunction()" id="button" title="Go to top">Top</button>
