--- a/portfolio.html
+++ b/portfolio.html
@@ -205,8 +205,13 @@
           <br />
           Klik på linket nedenfor, for at se video samt hjemmeside.
         </p>
-        <div class="link">
-          <a href="">Pilotprojekt</a>
+        <div
+          class="https://sarakondrup.dk/kea/05-indhold/Pilot_projekt/index.html"
+        >
+          <a
+            href="https://sarakondrup.dk/kea/05-indhold/Pilot_projekt/index.html"
+            >Pilotprojekt</a
+          >
         </div>
 
         <h3>05.02.01 Redesign og temadokumentation</h3>
