--- a/portfolio.html
+++ b/portfolio.html
@@ -205,9 +205,7 @@
           <br />
           Klik på linket nedenfor, for at se video samt hjemmeside.
         </p>
-        <div
-          class="https://sarakondrup.dk/kea/05-indhold/Pilot_projekt/index.html"
-        >
+        <div class="link">
           <a
             href="https://sarakondrup.dk/kea/05-indhold/Pilot_projekt/index.html"
             >Pilotprojekt</a
