--- a/portfolio.html
+++ b/portfolio.html
@@ -319,9 +319,9 @@
             2. Lav moodboard i XD
             <br />
             <br />
-            3. Research på Pinterest for inspiration til stilart - Søgeord:
-            digital retro design, minimastic, portfolio design, graphic fashion
-            trends, - Screenshot alt der inspirerer mig
+            3. Research på Pinterest for inspiration til stilart <br />
+            - Søgeord: digital retro design, minimastic, portfolio design,
+            graphic fashion trends, - Screenshot alt der inspirerer mig
             <br />
             <br />
             4. Læs:
