--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="om.html">Om mig</a>
+            <a href="om_mig.css">Om mig</a>
           </li>
         </ul>
       </nav>
@@ -32,7 +32,7 @@
 
     <div class="splash-billede">
       <img
-        src="/Billeder/portfolio_photoshop@2x.png"
+        src="/billeder/portfolio_photoshop@2x.png"
         alt="splash-billede"
         width="90%"
       />
