--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
             <a href="portfolio.html">Portfolio</a>
           </li>
           <li>
-            <a href="om_mig.css">Om mig</a>
+            <a href="om_mig.html">Om mig</a>
           </li>
         </ul>
       </nav>
