--- a/portfolio.html
+++ b/portfolio.html
@@ -31,11 +31,7 @@
     </header>
 
     <div class="splash-billede">
-      <img
-        src="/billeder/portfolio_photoshop@2x.png"
-        alt="splash-billede"
-        width="90%"
-      />
+      <img src="/billeder/portfolio.png" alt="" width="90%" />
     </div>
 
     <br />
