--- a/forside.html
+++ b/forside.html
@@ -25,7 +25,7 @@
               <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a href="om_mig.css">Om mig</a>
+              <a href="om_mig.html">Om mig</a>
             </li>
           </ul>
         </nav>
