--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     </header>
 
     <div class="splash-billede">
-      <img src="/billeder/portfolio.png" alt="" width="90%" />
+      <img src="/billeder/portfolio.png" alt="" />
     </div>
 
     <br />
