--- a/om_mig.html
+++ b/om_mig.html
@@ -188,6 +188,8 @@
         </p>
       </div>
 
+      <button onclick="topFunction()" id="button" title="Go to top">Top</button>
+
       <br />
 
       <footer>
